Added company edit

--- a/app/views/companies/_company.html.erb
+++ b/app/views/companies/_company.html.erb
@@ -5,7 +5,7 @@
     <% if company.contract_count == 0 %>
       Waitlisted
     <% else %>
-      &nbsp;
+      Reviewed
     <% end %>
   </td>
   <td><%= link_to 'View', company_contracts_path(company) %>
