--- a/app/views/companies/_form.html.erb
+++ b/app/views/companies/_form.html.erb
@@ -17,5 +17,5 @@
     <%= f.label :website, "Website" %>
     <%= f.text_field :website, :class => "form-control", :placeholder => "Enter URL: Optional" %>
   </div>
-  <%= f.submit "Add", :class => "btn btn-primary" %>
+  <%= f.submit "Save", :class => "btn btn-primary" %>
 <% end %>
