--- a/app/views/contract_revisions/show.html.erb
+++ b/app/views/contract_revisions/show.html.erb
@@ -44,7 +44,7 @@
             </tr>
             <tr>
               <th scope="col">Total Rating</th>
-              <td><b><%= @contract_revision.total_rating %></b></td>
+              <td><b><%= @contract_revision.total_rating.round(2) %></b></td>
             </tr>
             <tr>
               <th scope="col">The Right to Privacy</th>
@@ -156,7 +156,7 @@
             </tr>
             <tr>
               <th scope="col">Total Rating</th>
-              <td><%= @contract_revision.total_rating %></td>
+              <td><%= @contract_revision.total_rating.round(2) %></td>
             </tr>
           </tbody>
           <tbody>
