--- a/app/views/companies/edit.html.erb
+++ b/app/views/companies/edit.html.erb
@@ -1,7 +1,7 @@
 <div class="container">
   <div class="row">
     <div class="col-md-7">
-      <p>Edit company</p>
+      <p class="h3">Edit company</p>
       <%= render 'form', company: @company %>
     </div>
   </div>
