--- a/app/views/companies/new.html.erb
+++ b/app/views/companies/new.html.erb
@@ -1,7 +1,7 @@
 <div class="container pt-5">
   <div class="row">
     <div class="col-md-7">
-      <p>Request a new company</p>
+      <p class="h3">Request a new company</p>
       <%= render 'form', company: @company %>
     </div>
   </div>
