--- a/app/assets/stylesheets/websites.scss
+++ b/app/assets/stylesheets/websites.scss
@@ -38,13 +38,6 @@ ul.contract-revision-list {
   background-color: #F0F8FF;
 }
 
-.table td{
-  display: inline-block;
-  //Seems really hacky. 
-  width: 50vw;
-  overflow-wrap: break-word;
-}
-
 
 // Extra small devices (portrait phones, less than 576px)
 @media (max-width: 575.98px) {
@@ -97,6 +90,13 @@ ul.contract-revision-list {
     width: 45%;
     padding-right: 10px;
     white-space: nowrap;
+  }
+  
+  .table td, company-list td{
+    display: inline-block;
+    //Seems really hacky. 
+    width: 50vw;
+    overflow-wrap: break-word;
   }
 
   table.company-list td:nth-of-type(1):before { content: "Company Name"; }
