--- a/app/assets/stylesheets/websites.scss
+++ b/app/assets/stylesheets/websites.scss
@@ -98,6 +98,13 @@ ul.contract-revision-list {
     width: 50vw;
     overflow-wrap: break-word;
   }
+  .table th{
+    width: 30vw;
+  }
+  .table td, th{
+    //I can't find where border is being defined
+    border: none !important;
+  }
 
   table.company-list td:nth-of-type(1):before { content: "Company Name"; }
   table.company-list td:nth-of-type(2):before { content: "Web Site"; }
