Adds new elements to footers

--- a/app/views/websites/index.html.erb
+++ b/app/views/websites/index.html.erb
@@ -48,7 +48,7 @@
               </ol>
             <p><a class="btn btn-secondary" role="button" href="/top_ten_fair.html">View details »</a></p>
           </div>
-          <div class="col-lg-4">
+          <div class="col-lg-4 features-col">
             <h3>Most Recent 10 Reviews</h3>
             <p>Here are the most recently reviewed contracts.</p>
             <ol>
