Makes minor edits to CSS

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -92,7 +92,7 @@
               <br />
               <%= link_to 'Tax Info', '#' %>
               <br />
-              <%= link_to 'Break Diving, Inc.', 'https://www.breakdiving.org' %>
+              <%= link_to 'Break Diving, Inc.', 'http://www.breakdiving.org' %>
             </div>
             <div class="col-12 col-sm-4">
               <b>Contact Us</b>
