--- a/app/views/websites/index.html.erb
+++ b/app/views/websites/index.html.erb
@@ -10,7 +10,7 @@
           <%= form_tag companies_path, :method => 'get', :class => 'my-2 my-lg-0' do %>
               <div class="form-row">
                 <div class="col-md-8">
-                  <%= autocomplete_field_tag 'search', '', autocomplete_company_company_name_companies_path, :class => 'form-control mr-sm-2', placeholder: "Enter Company Name or URL"  %>
+                  <%= autocomplete_field_tag 'search', '', autocomplete_company_company_name_companies_path, :class => 'form-control-index mr-sm-2', placeholder: "Enter Company Name or URL"  %>
                 </div>
               </div>
               <br />
