Made 'did not find' text bold

--- a/app/views/companies/index.html.erb
+++ b/app/views/companies/index.html.erb
@@ -25,7 +25,8 @@
   </div>
   <div class="row">
     <div class="col-md-7">
-      <p>Didn't find what you are looking for? Use the form below to add it to our waiting list!
+      <strong>Didn't find what you are looking for?</strong>
+      <p>Use the form below to add it to our waiting list!
       Our team of volunteer attorneys will get to it as soon as they can!</p>
       <%= render 'form', company: @company %>
     </div>
