--- a/app/assets/stylesheets/master.scss
+++ b/app/assets/stylesheets/master.scss
@@ -21,7 +21,7 @@ body, html {
   color: #555;
   font-family: 'Lato', 'Ariel', sans-serif;
   font-weight: 300;
-  font-size: 20px;
+  font-size: 16px;
   text-rendering: optimizeLegibility;
   overflow-x: hidden;
 }
@@ -38,12 +38,17 @@ main, header, footer {
           flex:1;
 }
 
+.row {
+  max-width: 1140px;
+  margin: 0 auto;
+}
+
 // Headings
 
 h1 {
   margin-top: 0;
   margin-bottom: 20px;
-  color: #fff;
+  color: #555;
   font-size: 240%;
   word-spacing: 4px;
   letter-spacing: 1px;
@@ -81,7 +86,6 @@ ul.contract-revision-list {
 // Navigation Bar
 
 .navbar {
-  font-weight: bold;
   -webkit-box-shadow: 0px 1px 3px #2a2a2a;
           box-shadow: 0px 1px 3px #2a2a2a;
   position: relative;
@@ -89,8 +93,8 @@ ul.contract-revision-list {
 
 // CSS for website > index.html.erb
 #hero {
-  background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(0, 0, 0, 0.5)), to(rgba(0, 0, 0, 0.5))), image-url('hero-background.jpg');
-  background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), image-url('hero-background.jpg');
+  background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(0, 0, 0, 0.7)), to(rgba(0, 0, 0, 0.7))), image-url('hero-background.jpg');
+  background-image: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), image-url('hero-background.jpg');
   height: 100vh;
   background-size: cover;
   background-repeat: no-repeat;
@@ -100,8 +104,13 @@ ul.contract-revision-list {
           box-shadow: 0px 3px 8px #2a2a2a;
 }
 
+#hero h1 {
+  color: #fff;
+}
+
 .hero-box {
-  position: absolute;
+  font-size: 18px;
+  position: relative;
   width: 1140px;
   top: 10%;
   color: #fff;
@@ -110,26 +119,26 @@ ul.contract-revision-list {
 .request {
   color: #fff;
   border-color: #fff;
-  float: left;
-  -webkit-transform: translate(54.5%, -35%);
-          transform: translate(54.5%, -35%);
-  padding-left: 24px;
-  padding-right: 24px;
+//   float: left;
+//   // -webkit-transform: translate(54.5%, -35%);
+//   //         transform: translate(54.5%, -35%);
+//   padding-left: 24px;
+//   padding-right: 24px;
 }
 
-.btn-search {
-  float: left;
-  border: 1px solid #007bff;
-  -webkit-transform: translate(127%, -35%);
-          transform: translate(127%, -35%);
-}
+// .btn-search {
+//   float: left;
+//   border: 1px solid #007bff;
+//   margin-right: 25px;
+//   // -webkit-transform: translate(127%, -35%);
+//   //         transform: translate(127%, -35%);
+// }
 
-.form-control-index {
-  width: 110%;
-  left: 50%;
-  -webkit-transform: translate(33%, 5%);
-          transform: translate(33%, 5%);
-}
+// .form-index {
+//   width: 110%;
+  // -webkit-transform: translate(33%, 5%);
+          // transform: translate(33%, 5%);
+// }
 
 .features-col p, ol, li {
   font-size: 90%;
@@ -198,8 +207,6 @@ ul.contract-revision-list {
     left: -9999px;
   }
 
-  .btn-search { margin-top: 15px;}
-
   table.company-list tr {
     border: 1px solid #ccc;
     width: 100%;
@@ -216,7 +223,7 @@ ul.contract-revision-list {
 
   .table td, company-list td{
     display: inline-block;
-    //Seems really hacky. 
+    //Seems really hacky.
     width: 50vw;
     overflow-wrap: break-word;
   }
@@ -246,11 +253,12 @@ ul.contract-revision-list {
   h2 { font-size: 1.5em; }
   h3 { font-size: 1.4em; }
   h4 { font-size: 1.35em; }
-  .request {
+  .btn-search, .request {
     display: block;
     margin-left: auto;
     margin-right: auto;
   }
+  .request { margin-top: 10px; }
 }
 
 // Medium devices (tablets, less than 992px)
@@ -262,5 +270,6 @@ ul.contract-revision-list {
 
   .hero-box {
     width: 100%;
+    font-size: 90%;
   }
 }
