--- a/app/views/websites/index.html.erb
+++ b/app/views/websites/index.html.erb
@@ -6,27 +6,43 @@
       <h6 class="text-center">This Website's TOS Fairness Rating Score: 100 / 100</h6>
       <br>
       <div class="row">
-        <div class="col-md-10">
+        <div class="col-md-10 offset-md-1">
           <%= form_tag companies_path, :method => 'get', :class => 'my-2 my-lg-0' do %>
-              <div class="form-row">
-                <div class="col-md-8">
-                  <%= autocomplete_field_tag 'search', '', autocomplete_company_company_name_companies_path, :class => 'form-control-index mr-sm-2', placeholder: "Enter Company Name or URL"  %>
+              <div class="row">
+                <div class="col-md-8 offset-md-2">
+                  <%= autocomplete_field_tag 'search', '', autocomplete_company_company_name_companies_path, :class => 'form-control form-index mr-sm-2', placeholder: "Enter Company Name or URL"  %>
                 </div>
               </div>
               <br />
-              <%= submit_tag 'Search Company', :class => 'btn btn-primary my-2 my-sm-0 btn-search'%>
-              <%= link_to "Don't See What You Want? <span>Request New Review.</span>".html_safe, new_company_path, :class => 'btn btn-outline-info my-2 my-sm-0 request' %>
+              <div class="row">
+                <div class="col-md-8 offset-md-2">
+                  <div class="col-md-2 col-sm-12">
+                    <%= submit_tag 'Search Company', :class => 'btn btn-primary btn-search search-index'%>
+                  </div>
+                  <div class="col-md-4 col-sm-12">
+                    <%= link_to "Don't See What You Want? <span>Request New Review.</span>".html_safe, new_company_path, :class => 'btn btn-outline-info request' %>
+                  </div>
+                </div>
+              </div>
           <% end %>
         </div>
       </div>
       <br />
 
       <br>
-      <p>Most online user agreements are stacked in favor of the corporation, and not in favor of the individual user.  We aim to change that, and keep it that way.  TOSfairness is a collective of volunteer attorneys and netizens focused on corporate transparency in murky 'click' agreements on the web, on phones, on games, and online.</p>
-      <p>No one (and we mean NO ONE) reads every word of every agreement before joining a new website or agreeing to new terms of service, whether on a computer, or on your phone.  Well, until now.  Now, we read and rate as many of them for you as we can, in order of demand, so you can feel safer signing them.  Awesome, right?  You're welcome.</p>
-      <p>Brought to you by Break Diving, Inc. a 501(c)(3) not-for-profit with one primary mission: helping individuals succeed in life.  It follows that in order for people to succeed in life, they should know exactly what they are actually signing.  Right?  Let's get started!</p>
-      <p class="text-right"><a class="btn btn-primary btn-sm" role="button" href="about.html">Learn more about us »</a></p>
-      <p class="text-center"><strong>&#8623; SCROLL DOWN FOR THE TOP TENS &#8623;</strong></p>
+      <div class="row">
+        <div class="col-md-10 offset-md-1">
+          <p>Most online user agreements are stacked in favor of the corporation, and not in favor of the individual user.  We aim to change that, and keep it that way.  TOSfairness is a collective of volunteer attorneys and netizens focused on corporate transparency in murky 'click' agreements on the web, on phones, on games, and online.</p>
+          <p>No one (and we mean NO ONE) reads every word of every agreement before joining a new website or agreeing to new terms of service, whether on a computer, or on your phone.  Well, until now.  Now, we read and rate as many of them for you as we can, in order of demand, so you can feel safer signing them.  Awesome, right?  You're welcome.</p>
+          <p>Brought to you by Break Diving, Inc. a 501(c)(3) not-for-profit with one primary mission: helping individuals succeed in life.  It follows that in order for people to succeed in life, they should know exactly what they are actually signing.  Right?  Let's get started!</p>
+          <p class="text-right"><a class="btn btn-primary btn-sm" role="button" href="about.html">Learn more about us »</a></p>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-md-10 offset-1">
+          <p class="text-center"><strong>&#8623; SCROLL DOWN FOR THE TOP TENS &#8623;</strong></p>
+        </div>
+      </div>
     </div>
   </div>
 </section>
