--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -100,7 +100,7 @@
             </div> -->
           <!-- </div> -->
           <div class="row text-center footer-desktop">
-            <div class='col-md-8 offset-md-2'>
+            <div class='col-md-8 offset-md-2 col-sm-12'>
               <%= link_to 'TOS Fairness', root_path %>
               <%= link_to 'Terms & Privacy', terms_path %>
               <%= link_to 'Tax Info', '#' %>
