--- a/app/views/contracts/index.html.erb
+++ b/app/views/contracts/index.html.erb
@@ -70,7 +70,7 @@
           <% end %>
         </tbody>
       </table>
-      <table class="table" style="display: none;" id="view-sm">
+      <table class="table contract-table" style="display: none;" id="view-sm">
         <tbody>
           <% @contracts.each_with_index do |contract, index| %>
             <tr class="dropdown-head">
