Fixed mobile sizing for search

--- a/app/assets/stylesheets/master.scss
+++ b/app/assets/stylesheets/master.scss
@@ -253,6 +253,14 @@ ul.contract-revision-list {
     width: 50vw;
     overflow-wrap: break-word;
   }
+  
+  
+  .search-data{
+    float: right;
+  }
+  .search-list td{
+    padding-left: 15px !important;
+  }
 }
 
 // Small devices (landscape phones, less than 768px)
