--- a/app/views/companies/index.html.erb
+++ b/app/views/companies/index.html.erb
@@ -5,7 +5,7 @@
   <div class="row">
     <div class="col-md-8">
       <% if !@companies.nil? %>
-        <table class="table company-list">
+        <table class="table company-list search-list">
           <thead>
             <tr>
               <th scope="col">Company Name</th>
