Adjusted top ten lists

--- a/app/views/websites/index.html.erb
+++ b/app/views/websites/index.html.erb
@@ -50,7 +50,7 @@
         <div class="row">
           <div class="col-lg-4 features-col">
             <h3>Top Ten Daily Fair</h3>
-            <p>Here are the top ten agreements for the day that we deem most transparent, fair, and reasonable, where we feel the company is genuinely concerned about you, the user or customer, your best interests, and your welfare.  We applaud them for leading the way!</p>
+            <p>We deem these agreements to be the most transparent, fair, and reasonable. We feel these companies genuinely respect you.  We applaud them for leading the way!</p>
               <ol>
                 <% if !@top_ten_fairs.nil? %>
                   <% @top_ten_fairs.each do |c| %>
@@ -62,7 +62,7 @@
           </div>
           <div class="col-lg-4 features-col">
             <h3>Most Recent 10 Reviews</h3>
-            <p>Here are the most recently reviewed contracts.</p>
+            <p>Here are the most recently reviewed contracts.  We are always looking for additional attorneys and law students to help us review more!  Join us!  </p>
             <ol>
               <% if !@latest_reviews.nil? %>
                 <% @latest_reviews.each do |c| %>
@@ -74,7 +74,7 @@
           </div>
          <div class="col-lg-4 features-col">
             <h3>Top Ten Daily Unfair</h3>
-            <p>Here are the top ten agreements for the day that we deem most unclear, most unfair, and unreasonable, where we feel the company is genuinely unconcerned about you, the user or customer, your best interests, and your welfare.  We urge them to stop trying to take advantage of their users.</p>
+            <p>These agreements are the most unclear and most unreasonable. The company is genuinely unconcerned about your welfare.  Beware: they take advantage of you!</p>
             <ol>
               <% if !@top_ten_unfairs.nil? %>
                 <% @top_ten_unfairs.each do |c| %>
