Adjusted center top ten list

--- a/app/views/websites/index.html.erb
+++ b/app/views/websites/index.html.erb
@@ -62,7 +62,7 @@
           </div>
           <div class="col-lg-4 features-col">
             <h3>Most Recent 10 Reviews</h3>
-            <p>Here are the most recently reviewed contracts.  We are always looking for additional attorneys and law students to help us review more!  Join us!  </p>
+            <p>Here are the most recently reviewed contracts.  We are always looking for additional attorneys and law students to help us review more!  Join us and help us stick up for the underdog!  </p>
             <ol>
               <% if !@latest_reviews.nil? %>
                 <% @latest_reviews.each do |c| %>
