--- a/app/views/contract_revisions/_form.html.erb
+++ b/app/views/contract_revisions/_form.html.erb
@@ -140,6 +140,12 @@
         <%= f.text_area :ways_to_improve, :class => "form-control", :placeholder => "Enter ways to improve", :row => 3 %>
       </div>
     </div>
+    <div class="form-group row">
+      <%= f.label :status, "Review Status", :class => "col-6 col-form-label" %>
+      <div class="col-2">
+        <%= f.select(:status, ContractRevision::STATUS,{}, {class: 'form-control'}) %>
+      </div>
+    </div>
     <%= f.submit "Save", :class => "btn btn-primary" %>
   <% end %>
 </div>
