fixed link to detail page for top ten unfair

--- a/app/views/websites/index.html.erb
+++ b/app/views/websites/index.html.erb
@@ -82,7 +82,7 @@
                 <% end %>
               <% end %>
             </ol>
-          <p><a class="btn btn-secondary" role="button" href="/top_ten_fair.html">View details »</a></p>
+          <p><a class="btn btn-secondary" role="button" href="/top_ten_unfair.html">View details »</a></p>
         </div>
       </div>
       <hr>
