--- a/app/views/websites/index.html.erb
+++ b/app/views/websites/index.html.erb
@@ -61,7 +61,7 @@
             <p><a class="btn btn-secondary" role="button" href="/top_ten_fair.html">View details »</a></p>
           </div>
           <div class="col-lg-4 features-col">
-            <h2>Most Recent 10 Reviews</h2>
+            <h2>Most Recent Reviews</h2>
             <p>Here are the most recently reviewed contracts.  We are always looking for additional attorneys and law students to help us review more!  Join us and help us stick up for the underdog!  </p>
             <ol>
               <% if !@latest_reviews.nil? %>
