--- a/app/assets/stylesheets/master.scss
+++ b/app/assets/stylesheets/master.scss
@@ -99,7 +99,7 @@ ul.contract-revision-list {
 #hero {
   background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(0, 0, 0, 0.6)), to(rgba(0, 0, 0, 0.6))), image-url('hero-background.jpg');
   background-image: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)), image-url('hero-background.jpg');
-  height: 100vh;
+  height: 100%;
   color: #fff;
   background-size: cover;
   background-repeat: no-repeat;
