--- a/app/views/websites/about.html.erb
+++ b/app/views/websites/about.html.erb
@@ -4,6 +4,12 @@
 
   <h1>About TOS Fairness</h1>
 
+  <p>Most online user agreements are stacked in favor of the corporation, and not in favor of the individual user.  We aim to change that, and keep it that way.  TOSfairness is a collective of volunteer attorneys and netizens focused on corporate transparency in murky 'click' agreements on the web, on phones, on games, and online.</p>
+
+  <p>No one (and we mean NO ONE) reads every word of every agreement before joining a new website or agreeing to new terms of service, whether on a computer, or on your phone.  Well, until now.  Now, we read and rate as many of them for you as we can, in order of demand, so you can feel safer signing them.  Awesome, right?  You're welcome.</p>
+
+  <p>Brought to you by Break Diving, Inc. a 501(c)(3) not-for-profit with one primary mission: helping individuals succeed in life.  It follows that in order for people to succeed in life, they should know exactly what they are actually signing.  Right?  Let's get started!</p>
+
   <p>The Terms of Service Fairness Project is a wholly owned subsidiary project of Break Diving, Inc., a 501(c)(3) tax-exempt organization headquartered in New York.</p>
 
   <p>TOS Fairness grew out of founder and attorney Monroe Mann's increasing frustration with the American court system as well as the absolutely horrifically unfair online terms of services that people were unknowingly or unwittingly signing.</p>  
