Hero css changes

--- a/app/assets/stylesheets/master.scss
+++ b/app/assets/stylesheets/master.scss
@@ -279,7 +279,7 @@ ul.contract-revision-list {
     margin-left: auto;
     margin-right: auto;
   }
-  #hero { height: 950px; }
+  #hero { height: 100%; }
   .search-index { width: 100%; }
 }
 
