--- a/app/views/websites/index.html.erb
+++ b/app/views/websites/index.html.erb
@@ -30,7 +30,7 @@
         <div class="col-md-10 offset-md-1">
           <p>Most online user agreements are stacked in favor of the corporation, and not in favor of the individual user.  We aim to change that, and keep it that way.  TOSfairness is a collective of volunteer attorneys and netizens focused on corporate transparency in murky 'click' agreements on the web, on phones, on games, and online.</p>
           <p>Proudly brought to you by Break Diving Inc.</p>
-          <p class="text-right" style="margin-bottom: 4rem;"><a class="btn btn-primary btn-sm" role="button" href="about.html">Learn more about us »</a></p>
+          <p class="text-right"><a class="btn btn-primary btn-sm" role="button" href="about.html">Learn more about us »</a></p>
         </div>
       </div>
     </div>
